--- a/index.html
+++ b/index.html
@@ -7,6 +7,77 @@
     <link rel="stylesheet" href="style/style.css">
 </head>
 <body>
-    
+    <header>
+        <section class="banner">
+            <div class="first-h">
+                <h4>Happy New Year</h4>
+            </div>
+            <div class="secound-hh">New Year Party <br>
+                 Celebration</div>
+        </section>
+    </header>
+    <main>
+        <div class="of">
+            <h1 class="off">65% OFF</h1>
+            <h4 class="off-one">OUR HOLIDAY DEALS ARE BETTER</h4>
+            <h2 class="off-two">ALL CATEGORIES</h2>
+            <img src="resources/New Year Photo.png" alt="">
+        </div>
+        <section class="happy">
+            <div class="happy-div">
+                <h1 class="welcome">Welcome to <br>
+                     midnight party</h1>
+                <p class="dolor">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie <br> malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. </p>
+                <h4 class="join">Join Now</h4>
+            </div>
+            <div class="happy-img-div">
+                <img src="resources/Group 70.png" alt="">
+            </div>
+        </section>
+        <div class="best">
+            <h4 class="the">THE BEST GIFTS</h4>
+            <h2 class="our">Our Awesome Portfolio</h2>
+            <p class="dolor2">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. <br> Ipsum sed sodales risus ut pellentesque vel euismod. </p>
+        </div>
+        <div class="imga">
+            <img src="resources/Rectangle 3.png" alt="">
+            <img src="resources/Rectangle 4.png" alt="">
+            <img src="resources/Rectangle 5.png" alt="">
+        </div>
+        <div class="imga2">
+            <img src="resources/Rectangle 6.png" alt="">
+            <img src="resources/Rectangle 7.png" alt="">
+            <img src="resources/Rectangle 8.png" alt="">
+        </div>
+        <div class="last">
+            <img src="resources/Group 61.png" alt="">
+            <h2>Subscribe Newsletter</h2>
+            <p>Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. <br> Ipsum sed sodales risus ut pellentesque vel euismod. </p>
+            <div class="user">
+                <input type="password" name="" id="" placeholder="user@gmail.com">
+                <label class="subscribe"  for="subscribe">subscribe</label>
+            </div>
+        </div>
+    </main>
+    <footer>
+        <div class="footer">
+            <div class="left">
+                <p class="left1">44, Big Building Roosevelt Street <br>
+                    Beach Gardens Florida 33410</p>
+                    <div class="link">
+                        <img src="resources/Facebook.png" alt="">
+                        <img src="resources/Instagram.png" alt="">
+                        <img src="resources/Twitter.png" alt="">
+                        <img src="resources/Linkedin.png" alt="">
+                    </div>
+                <h5 class="left2">2017, All Rights Reserved.</h5>
+                
+            </div>
+            <div class="right">
+                <h5 class="right1">2017, All Rights Reserved.</h5>
+                <h5 class="unsub">Unsubscribe</h5>
+              </div>
+        </div>
+    </footer> 
 </body>
 </html>
