--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header>
         <section class="banner">
             <div class="first-h">
-                <h4>Happy New Year</h4>
+                <h4>Happy New Year</h4><br>
             </div>
             <div class="secound-hh">New Year Party <br>
                  Celebration</div>
